--- a/samples/HeyBox.Net.Samples.SimpleBot/HeyBox.Net.Samples.SimpleBot.csproj
+++ b/samples/HeyBox.Net.Samples.SimpleBot/HeyBox.Net.Samples.SimpleBot.csproj
@@ -1,15 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <LangVersion>preview</LangVersion>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+  <Import Project="../../HeyBox.Net.Sample.props" />
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\HeyBox.Net\HeyBox.Net.csproj" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
-
+  
 </Project>
