--- a/HeyBox.Net.props
+++ b/HeyBox.Net.props
@@ -20,7 +20,7 @@
     <PackageTags>qq;qqbot</PackageTags>
     <PackageReleaseNotes>See https://github.com/gehongyan/HeyBox.Net/releases</PackageReleaseNotes>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageIcon>Logo_Small.png</PackageIcon>
+<!--    <PackageIcon>Logo_Small.png</PackageIcon>-->
     <TargetFrameworks>net8.0;net6.0</TargetFrameworks>
     <NoWarn>$(NoWarn);NU1803</NoWarn>
     <WarningLevel>6</WarningLevel>
@@ -37,6 +37,6 @@
     <None Include="../../README.md" Pack="true" PackagePath="\"/>
     <None Include="../../LICENSE" Pack="true" PackagePath="\"/>
     <None Include="../../THIRD-PARTY-NOTICES.txt" Pack="true" PackagePath="\"/>
-    <None Include="../../docs/logo/Logo_Small.png" Pack="true" PackagePath=""/>
+<!--    <None Include="../../docs/logo/Logo_Small.png" Pack="true" PackagePath=""/>-->
   </ItemGroup>
 </Project>
